// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|AboutPage failed to fetch new version 1`] = `
<div
  class="css-vno98q"
>
  <div
    class="css-nx0jxu"
  >
    <header
      class="css-1axd3uw"
    >
      <svg
        class="css-d90pge"
        viewBox="0 0 420 538"
      >
        <path
          d="M 420,0 28,28 52,520 420,538 Z"
          fill="#f1618c"
        />
        <path
          d="M 324.8652,6.79492 320,72 348.4004,50.5996 372,72 V 3.42774 Z"
          fill="#fff"
        />
        <path
          d="m 230,96.80078 c 67.6,0 106.5996,37.19884 104.5996,111.79882 l -77.4004,2 v -0.1992 c 1.6,-40 -15.7984,-44 -25.3984,-44 -9,0 -24.4004,2.8004 -24.4004,24.4004 0,53.4 131.4004,50.4 131.4004,158 0,60.4 -46.8008,88.39844 -106.8008,88.39844 -62,0 -116.4,-21.19884 -110,-113.79884 h 81 c -1,37.4 7.2008,50.79884 27.8008,50.79884 16,0 23.1992,-8.99844 23.1992,-24.39844 0,-54.8 -129.5996,-56.6 -129.5996,-157 0,-57.6 37.5996,-96 105.5996,-96 z"
          fill="#fff"
        />
        <path
          d="M 42,520 18,28 H 0 l 18,492 z"
          fill="#b57ee5"
        />
      </svg>
      <span
        class="css-1rd1s08"
      >
        Storybook 5.0.0
      </span>
    </header>
  </div>
  <div
    class="css-nx0jxu"
  >
    Cannot currently fetch the latest version from Storybook. Try 
    <a
      href="https://github.com/storybooks/storybook/blob/master/CHANGELOG.md"
    >
      reading the full changelog
    </a>
  </div>
  <div
    class="css-nx0jxu"
  >
    <div
      class="css-ptjnfv"
    >
      <a
        class="css-q2y3yl"
        href="https://storybook.js.org"
      >
        Storybook docs
      </a>
      <a
        class="css-q2y3yl"
        href="https://github.com/storybooks/storybook"
      >
        GitHub
      </a>
      <a
        class="css-q2y3yl"
        href="https://storybook.js.org/support"
      >
        Support
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI|AboutPage new version required 1`] = `
<div
  class="css-vno98q"
>
  <div
    class="css-nx0jxu"
  >
    <header
      class="css-1axd3uw"
    >
      <svg
        class="css-d90pge"
        viewBox="0 0 420 538"
      >
        <path
          d="M 420,0 28,28 52,520 420,538 Z"
          fill="#f1618c"
        />
        <path
          d="M 324.8652,6.79492 320,72 348.4004,50.5996 372,72 V 3.42774 Z"
          fill="#fff"
        />
        <path
          d="m 230,96.80078 c 67.6,0 106.5996,37.19884 104.5996,111.79882 l -77.4004,2 v -0.1992 c 1.6,-40 -15.7984,-44 -25.3984,-44 -9,0 -24.4004,2.8004 -24.4004,24.4004 0,53.4 131.4004,50.4 131.4004,158 0,60.4 -46.8008,88.39844 -106.8008,88.39844 -62,0 -116.4,-21.19884 -110,-113.79884 h 81 c -1,37.4 7.2008,50.79884 27.8008,50.79884 16,0 23.1992,-8.99844 23.1992,-24.39844 0,-54.8 -129.5996,-56.6 -129.5996,-157 0,-57.6 37.5996,-96 105.5996,-96 z"
          fill="#fff"
        />
        <path
          d="M 42,520 18,28 H 0 l 18,492 z"
          fill="#b57ee5"
        />
      </svg>
      <span
        class="css-1rd1s08"
      >
        Storybook 5.0.0
      </span>
      <span
        class="css-1y3snwz"
      >
        Update available
      </span>
    </header>
  </div>
  <div
    class="css-nx0jxu"
  >
    <aside
      class="css-u4ybgy"
    >
      <div>
        Latest version
      </div>
      <div>
        <strong>
          5.0.3
        </strong>
      </div>
    </aside>
    <ul>
      <li>
        upgrade webpack & babel to latest
      </li>
      <li>
        new addParameters and third argument to .add to pass data to addons
      </li>
      <li>
        added the ability to theme storybook
      </li>
      <li>
        improved ui for mobile devices
      </li>
      <li>
        improved performance of addon-knobs
      </li>
    </ul>
    <a
      class="css-18n2xye"
      href="https://github.com/storybooks/storybook/blob/master/CHANGELOG.md"
      rel="noopener noreferrer"
      target="_blank"
    >
      Read full changelog
    </a>
  </div>
  <div
    class="css-nx0jxu"
  >
    <div
      class="css-a64er"
    >
      <header
        class="css-0"
      >
        <h1
          class="css-8vc5j1"
        >
          <span>
            Upgrade all storybook packages to latest:
          </span>
        </h1>
      </header>
      <div
        class="css-wemi1o"
      >
        <div
          class="css-1gq2da1"
        >
          <pre
            class="hljs css-4zr3vl"
          >
            <code
              class="css-1maezg8"
            >
              npx npm-check-updates 
              <span
                class="token string"
              >
                '/storybook/'
              </span>
               -u 
              <span
                class="token operator"
              >
                &&
              </span>
               yarn
            </code>
          </pre>
        </div>
        <ul
          class="css-1bx3lfx"
        >
          <li
            class="css-wo86af"
          >
            <button
              class="css-kimefk"
            >
              copy
            </button>
          </li>
        </ul>
      </div>
      <p>
        Alternatively if you're using a yarn you could run the following command, and check all storybook related packages:
      </p>
      <div
        class="css-wemi1o"
      >
        <div
          class="css-1gq2da1"
        >
          <pre
            class="hljs css-4zr3vl"
          >
            <code
              class="css-1maezg8"
            >
              yarn upgrade-interactive --latest
            </code>
          </pre>
        </div>
        <ul
          class="css-1bx3lfx"
        >
          <li
            class="css-wo86af"
          >
            <button
              class="css-kimefk"
            >
              copy
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="css-nx0jxu"
  >
    <div
      class="css-ptjnfv"
    >
      <a
        class="css-q2y3yl"
        href="https://storybook.js.org"
      >
        Storybook docs
      </a>
      <a
        class="css-q2y3yl"
        href="https://github.com/storybooks/storybook"
      >
        GitHub
      </a>
      <a
        class="css-q2y3yl"
        href="https://storybook.js.org/support"
      >
        Support
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI|AboutPage up to date 1`] = `
<div
  class="css-vno98q"
>
  <div
    class="css-nx0jxu"
  >
    <header
      class="css-1axd3uw"
    >
      <svg
        class="css-d90pge"
        viewBox="0 0 420 538"
      >
        <path
          d="M 420,0 28,28 52,520 420,538 Z"
          fill="#f1618c"
        />
        <path
          d="M 324.8652,6.79492 320,72 348.4004,50.5996 372,72 V 3.42774 Z"
          fill="#fff"
        />
        <path
          d="m 230,96.80078 c 67.6,0 106.5996,37.19884 104.5996,111.79882 l -77.4004,2 v -0.1992 c 1.6,-40 -15.7984,-44 -25.3984,-44 -9,0 -24.4004,2.8004 -24.4004,24.4004 0,53.4 131.4004,50.4 131.4004,158 0,60.4 -46.8008,88.39844 -106.8008,88.39844 -62,0 -116.4,-21.19884 -110,-113.79884 h 81 c -1,37.4 7.2008,50.79884 27.8008,50.79884 16,0 23.1992,-8.99844 23.1992,-24.39844 0,-54.8 -129.5996,-56.6 -129.5996,-157 0,-57.6 37.5996,-96 105.5996,-96 z"
          fill="#fff"
        />
        <path
          d="M 42,520 18,28 H 0 l 18,492 z"
          fill="#b57ee5"
        />
      </svg>
      <span
        class="css-1rd1s08"
      >
        Storybook 5.0.0
      </span>
      <span
        class="css-3txot4"
      >
        You're up to date
      </span>
    </header>
  </div>
  <div
    class="css-nx0jxu"
  >
    <aside
      class="css-u4ybgy"
    >
      <div>
        Latest version
      </div>
      <div>
        <strong>
          5.0.0
        </strong>
      </div>
    </aside>
    <ul>
      <li>
        upgrade webpack & babel to latest
      </li>
      <li>
        new addParameters and third argument to .add to pass data to addons
      </li>
      <li>
        added the ability to theme storybook
      </li>
      <li>
        improved ui for mobile devices
      </li>
      <li>
        improved performance of addon-knobs
      </li>
    </ul>
    <a
      class="css-18n2xye"
      href="https://github.com/storybooks/storybook/blob/master/CHANGELOG.md"
      rel="noopener noreferrer"
      target="_blank"
    >
      Read full changelog
    </a>
  </div>
  <div
    class="css-nx0jxu"
  >
    <div
      class="css-ptjnfv"
    >
      <a
        class="css-q2y3yl"
        href="https://storybook.js.org"
      >
        Storybook docs
      </a>
      <a
        class="css-q2y3yl"
        href="https://github.com/storybooks/storybook"
      >
        GitHub
      </a>
      <a
        class="css-q2y3yl"
        href="https://storybook.js.org/support"
      >
        Support
      </a>
    </div>
  </div>
</div>
`;
